# process_overseer

./: .gitignore  CMakeLists.txt  a.out  controller.c  exec_cmd.c  helpers.c  helpers.h  overseer.c  simple  simple.c  statements.txt  test.c
Makefile/: Makefile  exec_cmd.c  helpers.c  overseer.c
controller/: CMakeLists.txt  controller.c
helpers/: CMakeLists.txt  helpers.c  helpers.h
overseer/: CMakeLists.txt  exec_cmd.c  overseer.c  simple.c
submission/: Makefile  controller.c  exec_cmd.c  helpers.c  helpers.h  overseer.c  statement.txt
